# OOP-RPG-project

./: Attack_type.h  Bow.cpp  Bow.h  CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  Entities.cpp  Entities.h  Entity.cpp  Entity.h  Equipment.cpp  Equipment.h  Exception.cpp  Exception.h  Game.cpp  Game.h  History.cpp  History.h  Incredient.cpp  Incredient.h  Ingredient.cpp  Ingredient.h  Item.cpp  Item.h  Monster.cpp  Monster.h  Player.cpp  Player.h  README.md  Record.cpp  Record.h  RecordAttack.cpp  RecordAttack.h  RecordAttackBuilder.cpp  RecordAttackBuilder.h  RecordFight.cpp  RecordFight.h  Stats.cpp  (+8 more)
.github/workflows/: cmake.yml
data/: items.txt  monsters.txt  player.txt
